Ensure tall popups are always visible. Closes #694

--- a/css/sass/modules/_popup.scss
+++ b/css/sass/modules/_popup.scss
@@ -1,7 +1,7 @@
 .popup {
 	max-width: 420px;
 	background: #fff;
-	margin: 0 auto 0;
+	margin: 4em auto;
 	padding: 50px 0 40px;
 	position: relative;
 	display: none;
